<?xml version="1.0"?>
<package format="1">
  <name>coral_usb</name>
  <version>0.0.0</version>
  <description>The coral_usb package</description>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/coral_usb</url>

  <maintainer email="s-kitagawa@jsk.imi.i.u-tokyo.ac.jp">Shingo Kitagawa</maintainer>
  <author email="s-kitagawa@jsk.imi.i.u-tokyo.ac.jp">Shingo Kitagawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>jsk_perception</run_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
