<?xml version="1.0"?>
<package format="1">
  <name>coral_usb</name>
  <version>0.0.2</version>
  <description>The coral_usb package</description>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/coral_usb</url>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>
  <build_depend version_gte="0.6.1">catkin_virtualenv</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>jsk_perception</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python3-rospkg-modules</run_depend>
  <run_depend>python3-empy</run_depend>
  <run_depend>python3-numpy</run_depend>
  <run_depend>python3-setuptools</run_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
