<?xml version="1.0"?>
<package format="3">
  <name>coral_usb</name>
  <version>0.0.10</version>
  <description>The coral_usb package</description>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/coral_usb</url>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>
  <build_depend version_gte="0.6.1">catkin_virtualenv</build_depend>
  <!-- <build_depend>cv_bridge</build_depend> -->
  <!-- for melodic -->
  <build_depend condition="$ROS_PYTHON_VERSION == 2">cv_bridge_python3</build_depend>
  <!-- for noetic -->
  <build_depend condition="$ROS_PYTHON_VERSION == 3">cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>jsk_perception</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-rospkg-modules</exec_depend>
  <exec_depend>python3-empy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>
  <exec_depend>resource_retriever</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>jsk_tools</test_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
